<resources>
    <string name="app_name">PictureLinkWorld</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="all_text">源素</string>"
    <string name="book_text">册子</string>
    <string name="share_text">分享</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_edit">搜索图片</string>"
    <string name="sign">登录</string>
    <string name="register">注册</string>
    <string name="userName">用户名：</string>
    <string name="userPassword">密  码：</string>
</resources>