<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/sign"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="272dp"
        android:layout_height="200dp"
        android:layout_marginBottom="628dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userName" />

            <EditText
                android:id="@+id/userName_edit"
                android:layout_width="150dp"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userPassword" />

            <EditText
                android:id="@+id/userPassword_edit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="576dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="576dp"
        android:text="@string/sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>