<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guofeng.picturelinkworld.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:id="@+id/all_fragment"
            android:contentDescription="@string/app_name">


        </FrameLayout>

        <FrameLayout
            android:id="@+id/display_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:contentDescription="@string/app_name"
            android:visibility="gone">

            <ImageView
                android:id="@+id/this_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/black"
                android:contentDescription="@string/app_name" />
        </FrameLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_search_24"
                tools:ignore="TouchTargetSizeCheck" />
           <TextView
               android:id="@+id/all_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/all_text"
               android:gravity="center"
               android:layout_marginEnd="20dp"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:textSize="20sp"/>
            <TextView
                android:id="@+id/book_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_text"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/share_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_text"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginEnd="50dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/overflow_button"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_segment_24"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>